updated door source

--- a/readme
+++ b/readme
@@ -22,6 +22,7 @@ Sources of external materials used:
 Menu Screen Background: https://gameartpartners.com/downloads/platformer-stone-blocks-set-1/
 Font: https://www.fontspace.com/pixeboy-font-f43730
 Diamond: https://www.pixilart.com/draw
+Door: http://pixelartmaker.com/art/e8d4a14de958a7f
 
 The rest of the artwork are done by group members.
 ___________________________________________________________________
