--- a/readme
+++ b/readme
@@ -7,7 +7,7 @@ Control
 -Click the left button to start the game (from the menu)
 
 Information:
--Your goal is to reach the exit.
+-![](DungeonCrawlers/src/main/resources/mainCharacter2.png) Your goal is to reach the exit.
 -Don't let the enemy catch up to you! This will result in instant game over.
 -Regular rewards, worth 100 points. You need to collect all the coins to exit the dungeon.
 -Special rewards, worth 200 points. 
